# HTTP-2

./: .gitignore  BENCHMARK.md  CMakeLists.txt  README.md  SETUP_OPENSSL.md  architecture.md  build.bat  gen_certs.bat  implementation_plan.md  implementation_plan_https.md  implementation_plan_quic.md  index.html  server.crt  server.csr  server.key  task.md  technical_blueprint.md  test_curl.ps1  test_file.txt  test_h2.ps1  test_h2.py  test_h2_tls.ps1  test_h3.ps1  test_https.ps1  test_perf.ps1  test_quic.ps1  walkthrough.md
src/: main.cpp
src/api/: UserController.hpp
src/core/: BufferPool.cpp  BufferPool.hpp  Ring.hpp  Server.hpp
src/coro/: IOAwaitable.hpp  Task.hpp
src/http/: Json.hpp  Parser.cpp  Parser.hpp  Request.hpp  Router.hpp
src/http2/: Frame.hpp  Hpack.hpp  Session.hpp
src/http3/: Frame.hpp  Qpack.hpp
src/net/: Connection.hpp
src/quic/: Packet.hpp  QuicSession.hpp  UdpSocket.hpp
src/sys/: LinuxUring.cpp  Platform.hpp  WindowsIOCP.cpp
src/tls/: TlsContext.hpp  TlsSession.hpp
